tests/positive/HoleTypeParameter.juvix
module HoleTypeParameter;

type List' (A : _) :=
  | nil'
  | cons' A (List' A);
